tests/api/reference/negative/08-output-after-file-align.asm
emit.u8(0x11)
region.file_align(8)
emit.u8(0x22)
